# UnFold

./: .gitignore  CMakeLists.txt  CODEBASE_OVERVIEW.md  README.md
resources/: resources.qrc
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h  MiniMap.cpp  MiniMap.h  SettingsView.cpp  SettingsView.h
src/canvas/: SpatialScene.cpp  SpatialScene.h  SpatialView.cpp  SpatialView.h
src/filesystem/: FileWatcher.cpp  FileWatcher.h  FilesystemWorker.cpp  FilesystemWorker.h
src/items/: EdgeItem.cpp  EdgeItem.h  NodeItem.cpp  NodeItem.h
src/layout/: LayoutEngine.cpp  LayoutEngine.h
src/persistence/: SettingsManager.h  WorkspaceManager.cpp  WorkspaceManager.h
